--- a/test.ipynb
+++ b/test.ipynb
@@ -2,37 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EE\n",
-      "======================================================================\n",
-      "ERROR: test_funciton2 (__main__.Test)\n",
+      "..\n",
       "----------------------------------------------------------------------\n",
-      "TypeError: test_funciton2() takes 0 positional arguments but 1 was given\n",
+      "Ran 2 tests in 0.001s\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_function_1 (__main__.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "TypeError: test_function_1() takes 0 positional arguments but 1 was given\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.002s\n",
-      "\n",
-      "FAILED (errors=2)\n"
+      "OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x7f045848e0b8>"
+       "<unittest.main.TestProgram at 0x7f0458468320>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +37,7 @@
     "#         self.assertListEqual(self.s.result, expected)\n",
     "#         self.assertContentEqual(s.result, expected)\n",
     "        \n",
-    "    def test_funciton2():\n",
+    "    def test_funciton2(self):\n",
     "        pass\n",
     "    \n",
     "# if __name__ == \"__main__\":\n",
